samples/_failures_safe/1761399300_a7e8b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_997b7bbf.c: In function ‘main’:
./samples/SAFE/__tmp_997b7bbf.c:150:5: error: expected ‘{’ at end of input
  150 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_997b7bbf.c:150:5: error: expected declaration or statement at end of input
